# Voyager

./: .gitignore  LOGGING.md  README.md  minecraft_launcher.py  pyproject.toml  requirements.txt  run.py
installation/: cloud_deploy_aliyun_tencent.md
voyager/: voyager.py
voyager/agents/: action.py  critic.py  curriculum.py  skill.py
voyager/env/: bridge.py
voyager/env/mineflayer/: index.js  package.json
voyager/prompts/: __init__.py  skill_test.txt
voyager/utils/: __init__.py  logger.py  telemetry.py
